@@ -1,3 +1,7 @@
+2023-02-03  Matteo Corti  <matteo@corti.li>
+
+        * tmstatus.sh: Show log files
+
 2023-01-30  Matteo Corti  <matteo@corti.li>
 
         * tmstatus.sh: Refactoring: do not call the same tmutil command more than once
